Fixing portlet overflow issue

--- a/assets/sass/components/_portlet.scss
+++ b/assets/sass/components/_portlet.scss
@@ -1,6 +1,6 @@
 .kt-portlet {
     &__body {
-        overflow: auto;
+        overflow-x: hidden;
     }
 
     &__head {
